<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvHeaderGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_header"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/primary_blue"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph_sub"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/text_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderGraph"/>

    <LinearLayout
        android:id="@+id/cardGraph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_card_shadow"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubHeader"
        app:layout_constraintBottom_toTopOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvGraphTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/input_border"
            android:layout_marginBottom="10dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/btn_back"
        android:background="@drawable/btn_primary_modern"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>